# clover

./: .coveragerc  .gitignore  README.md  README.rst  __main__.py  basic_demo.py  gui.py  requirements.txt  setup.cfg  setup.py
docs/: Makefile  conf.py  index.rst
src/clover/: demo.py  gui.py  pypubsub_entry_point.py
tests/: conftest.py  test_skeleton.py
